--- a/force-app/main/default/aura/MyTeam/MyTeam.cmp
+++ b/force-app/main/default/aura/MyTeam/MyTeam.cmp
@@ -30,7 +30,7 @@
                     <button class="apollo-btn primary mt-button" onclick="{!c.inviteTeamMembers}"
                             title="{!if(v.hasStudies,'',$Label.c.PG_MT_T_Your_permissions_do_not_permit_this_action)}"
                             disabled="{!not(v.hasStudies)}">
-                        {!$Label.c.PG_MT_BTN_Add_New_Team_Member}
+                        {!if(v.userMode == 'Participant',$Label.c.PG_PST_L_Delegates_Add,$Label.c.PG_MT_BTN_Add_New_Team_Member)}
                     </button>
                 </div>
                 <div class="delegate-info-table-container">
