--- a/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
+++ b/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
@@ -60,7 +60,7 @@
                             <div class="button-panel-mobile rr-medium-up-hide">
                                 <div class="slds-grid slds-wrap slds-gutters slds-grid_vertical-align-center">
                                     <div class="slds-col slds-size_2-of-5 slds-medium-size_1-of-3">
-                                        <c:RRLink page="settings?tab=my-team">
+                                        <c:RRLink page="{!'settings?tab=' + if(v.userMode == 'Participant','delegates','my-team')}">
                                             <c:RRIcon iconName="icon-arrow-left"/>
                                             {!v.userMode == 'Participant' ? $Label.c.PG_PST_L_Delegates_Back : $Label.c.PG_NTM_BTN_Back_to_My_Team}
                                         </c:RRLink>
