--- a/force-app/main/default/aura/ResourceItem/ResourceItem.cmp
+++ b/force-app/main/default/aura/ResourceItem/ResourceItem.cmp
@@ -2,9 +2,10 @@
 
     <!--ATTRIBUTES-->
     <aura:attribute name="resource" type="ResourceService.ResourceWrapper"/>
+    <aura:attribute name="class" type="String" default="" description="css class"/>
 
     <!--COMPONENT BODY-->
-    <div class="resource-container">
+    <div class="{!'resource-container ' + (v.class.length > 0 ? v.class : '')}">
 
         <div class="resource-image-container" onclick="{!c.navigateToPage}">
             <img alt="{!$Label.c.Resources_Image_Unavailable}" src="{!v.resource.image}"/>
