--- a/force-app/main/default/aura/TaskEdit/TaskEdit.css
+++ b/force-app/main/default/aura/TaskEdit/TaskEdit.css
@@ -6,12 +6,17 @@
 }
 
 .THIS.te-task-panel{
-    max-width: 402px;
+    max-width: 832px;
     margin: auto;
     /*margin-bottom: 30px;*/
 }
 .THIS .te-col {
     margin-bottom: 10px;
+}
+
+.THIS .te-col-horizontal {
+    margin-bottom: 10px;
+    max-width: 360px;
 }
 
 .THIS .te-col-header {
