--- a/force-app/main/default/aura/ParticipantStatePanel/ParticipantStatePanel.cmp
+++ b/force-app/main/default/aura/ParticipantStatePanel/ParticipantStatePanel.cmp
@@ -8,16 +8,25 @@
     <aura:attribute name="peStatusesPathList" type="List"/>
     <aura:attribute name="peStatusStateMap" type="Map"/>
     <aura:attribute name="pe" type="Object"/>
+    <aura:attribute name="pse" type="Object"/>
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <!-- component body: -->
-    <c:ViewPatientItem pe="{!v.pe}"
-                       peStatusesPathList="{!v.peStatusesPathList}"
-                       peStatusStateMap="{!v.peStatusStateMap}"
-                       changeStatusBtnList="{!v.changeStatusBtnList}"
-                       singlePatientView="true"/>
+    <div class="psp-study-card">
+        <c:RRSpinner aura:id="spinner" size="small" showSpinner="true"/>
+        <aura:if isTrue="{!empty(v.pse)}">
+            <c:ViewPatientItem pe="{!v.pe}"
+                               peStatusesPathList="{!v.peStatusesPathList}"
+                               peStatusStateMap="{!v.peStatusStateMap}"
+                               changeStatusBtnList="{!v.changeStatusBtnList}"
+                               singlePatientView="true"/>
+            <aura:set attribute="else">
+                todo study card for PSE
+            </aura:set>
+        </aura:if>
+    </div>
 
 
 </aura:component>
