--- a/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
@@ -59,6 +59,26 @@
                 <behavior>Edit</behavior>
                 <field>Mailing_State_Province__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Enrolled__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Treatment_Period_Started__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Follow_Up_Period_Started__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participation_Complete__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participant_Dropped_Out__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
