--- a/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -23,6 +23,26 @@
                 <behavior>Edit</behavior>
                 <field>Condition_of_Interest_s__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Enrolled__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Treatment_Period_Started__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Follow_Up_Period_Started__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participation_Complete__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participant_Dropped_Out__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
