--- a/force-app/main/default/aura/ResourceItem/ResourceItem.cmp
+++ b/force-app/main/default/aura/ResourceItem/ResourceItem.cmp
@@ -7,22 +7,22 @@
     <!--COMPONENT BODY-->
     <div class="{!'resource-container ' + (v.class.length > 0 ? v.class : '')}">
 
-        <div class="resource-image-container" onclick="{!c.navigateToPage}">
+        <div class="resource-image-container resource-pointer" onclick="{!c.navigateToPage}">
             <img alt="{!$Label.c.Resources_Image_Unavailable}" src="{!v.resource.image}"/>
         </div>
 
         <div class="resource-description">
-            <div class="resource-description-title" onclick="{!c.navigateToPage}">
+            <div class="resource-description-title resource-pointer" onclick="{!c.navigateToPage}">
                 {!v.resource.title}
             </div>
-            <div class="resource-description-text" onclick="{!c.navigateToPage}">
+            <div class="resource-description-text resource-pointer" onclick="{!c.navigateToPage}">
                 {!v.resource.description}
             </div>
             <div class="resource-expiration-date">
                 Expires: <ui:outputDate value="{!v.resource.expirationDate}"/>
             </div>
             <div class="resource-description-footer">
-                <div class="resource-icon" onclick="{!c.doVote}">
+                <div class="resource-icon resource-pointer" onclick="{!c.doVote}">
                     <aura:if isTrue="{!v.resource.isVoted}">
                         <c:RRIcon iconName="icon-like-brand-new" color="blue" class="resource-icon-like"/>
                         <aura:set attribute="else">
@@ -31,7 +31,7 @@
                     </aura:if>
                 </div>
 
-                <div class="resource-icon" onclick="{!c.doFavorite}">
+                <div class="resource-icon resource-pointer" onclick="{!c.doFavorite}">
                     <aura:if isTrue="{!v.resource.isFavorite}">
                         <c:RRIcon iconName="icon-star-brand-new" color="blue" class="resource-icon-star"/>
                         <aura:set attribute="else">
